# LearnOpenGL

./: .travis.yml  LearnOpenGL.cabal  README.md  stack.yaml
app/1_Getting-started/1_Hello-window/: Hello-window.hs  Hello-window2.hs
app/1_Getting-started/2_Hello-triangle/: Hello-triangle.hs  Hello-triangle2.hs
app/1_Getting-started/3_Shaders/: Shaders-interpolated.hs  Shaders-uniform.hs  Shaders-using-object.hs
app/1_Getting-started/4_Textures/: Textures-combined.hs  Textures.hs
app/1_Getting-started/5_Transformations/: Transformations.hs
app/1_Getting-started/6_Coordinate-systems/: Coordinate-systems-multiple-objects.hs  Coordinate-systems-with-depth.hs  Coordinate-systems.hs
app/1_Getting-started/7_Camera/: Camera-circle.hs  Camera-keyboard-dt.hs  Camera-keyboard.hs  Camera-mouse.hs  Camera-with-class.hs  Camera-zoom.hs
app/2_Lighting/1_Colors/: Colors-scene.hs
app/2_Lighting/2_Basic-lighting/: Basic-lighting-diffuse.hs  Basic-lighting-specular.hs
app/2_Lighting/3_Materials/: Materials.hs
app/2_Lighting/4_Lighting-maps/: Lighting-maps-diffuse.hs  Lighting-maps-specular.hs
app/2_Lighting/5_Light-casters/: Light-casters-directional.hs  Light-casters-point.hs  Light-casters-spotlight-soft.hs  Light-casters-spotlight.hs
app/2_Lighting/6_Multiple-lights/: Multiple-lights-with-spot.hs  Multiple-lights.hs
app/2_Lightning/1_Colors/: Colors-scene.hs
app/2_Lightning/2_Basic-lighting/: Basic-lighting-diffuse.hs  Basic-lighting-specular.hs
app/2_Lightning/2_Basic-lightning/: Basic-lightning-diffuse.hs  Basic-lightning-specular.hs
app/2_Lightning/3_Materials/: Materials.hs
app/2_Lightning/4_Lighting-maps/: Lighting-maps-diffuse.hs  Lighting-maps-specular.hs
app/2_Lightning/4_Lightning-maps/: Lightning-maps-diffuse.hs  Lightning-maps-specular.hs
app/3_Model-loading/1_Mesh/: Light-cubes-with-mesh.hs
app/3_Model-loading/2_Model/: Model-diffuse.hs
data/1_Getting-started/4_Textures/Textures/: textures.frag
data/1_Getting-started/4_Textures/Textures-combined/: textures.frag
data/1_Getting-started/5_Transformations/: transformations.vs
data/2_Lighting/3_Materials/: materials.frag
data/2_Lighting/4_Lighting-maps/: specular.frag
data/2_Lighting/5_Light-casters/: directional.frag  directional.vs  point.frag  spotlight-soft.frag  spotlight.frag
data/2_Lighting/6_Multiple-lights/: multiple-spot.frag  multiple.frag
data/2_Lightning/2_Basic-lightning/: diffuse.frag  diffuse.vs
data/2_Lightning/4_Lighting-maps/: diffuse.frag  diffuse.vs
data/99_Dungeon/: maze.txt
src/: Shader.hs
src/Graphics/: GLMatrix.hs
src/LOGL/: Application.hs  Camera.hs  FRP.hs  Mesh.hs  Model.hs  Objects.hs  Resource.hs  Shader.hs  Texture.hs  Window.hs
src/LOGL/Application/: Context.hs  Window.hs
src/LOGL/Internal/: Resource.hs  Shader.hs  Texture.hs
