name:                LearnOpenGL
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/LearnOpenGL#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

flag buildAll
  Description: Build all programs
  Default:     False

library
    hs-source-dirs:      src
    exposed-modules:     LOGL.Window
                        , LOGL.FRP
                        , LOGL.Camera
                        , LOGL.Objects
                        , LOGL.Mesh
                        , LOGL.Model
                        , LOGL.Application.Context
    other-modules:      LOGL.Internal.Resource
                        , LOGL.Internal.Shader
                        , LOGL.Internal.Texture
    build-depends:       base >= 4.7 && < 5
                        , OpenGL
                        , bytestring
                        , filepath
                        , OpenGLRaw
                        , GLFW-b
                        , monad-loops
                        , GLUtil
                        , reactive-banana
                        , containers
                        , linear
                        , wavefront
                        , transformers
                        , monads-tf
    default-language:    Haskell2010

executable hello-window
    if !flag(buildAll)
        buildable:       False
    hs-source-dirs:      app/1_Getting-started/1_Hello-window
    main-is:             Hello-window.hs
    ghc-options:         -threaded -rtsopts -with-rtsopts=-N
    build-depends:       base
                        , GLFW-b
                        , OpenGL
                        , monad-loops
    default-language:    Haskell2010

executable hello-window2
    if !flag(buildAll)
        buildable:       False
    hs-source-dirs:      app/1_Getting-started/1_Hello-window
    main-is:             Hello-window2.hs
    ghc-options:         -threaded -rtsopts -with-rtsopts=-N
    build-depends:       base
                       , GLFW-b
                       , OpenGL
                       , monad-loops
    default-language:    Haskell2010

executable hello-triangle
    if !flag(buildAll)
        buildable:       False
    hs-source-dirs:      app/1_Getting-started/2_Hello-triangle
    main-is:             Hello-triangle.hs
    ghc-options:         -threaded -rtsopts -with-rtsopts=-N
    build-depends:       base
                       , GLFW-b
                       , OpenGL
                       , LearnOpenGL
                       , array
    default-language:    Haskell2010

executable hello-triangle2
    if !flag(buildAll)
        buildable:       False
    hs-source-dirs:      app/1_Getting-started/2_Hello-triangle
    main-is:             Hello-triangle2.hs
    ghc-options:         -threaded -rtsopts -with-rtsopts=-N
    build-depends:       base
                       , GLFW-b
                       , OpenGL
                       , LearnOpenGL
                       , array
                       , GLUtil
    default-language:    Haskell2010

executable shaders-uniform
    if !flag(buildAll)
        buildable:       False
    hs-source-dirs:      app/1_Getting-started/3_Shaders
    main-is:             Shaders-uniform.hs
    ghc-options:         -threaded -rtsopts -with-rtsopts=-N
    build-depends:       base
                       , GLFW-b
                       , OpenGL
                       , LearnOpenGL
                       , array
                       , GLUtil
    default-language:    Haskell2010

executable shaders-interpolated
    if !flag(buildAll)
        buildable:       False
    hs-source-dirs:      app/1_Getting-started/3_Shaders
    main-is:             Shaders-interpolated.hs
    ghc-options:         -threaded -rtsopts -with-rtsopts=-N
    build-depends:       base
                       , GLFW-b
                       , OpenGL
                       , LearnOpenGL
                       , array
                       , GLUtil
    default-language:    Haskell2010

executable shaders-using-object
    if !flag(buildAll)
        buildable:       False
    hs-source-dirs:      app/1_Getting-started/3_Shaders
    main-is:             Shaders-using-object.hs
    ghc-options:         -threaded -rtsopts -with-rtsopts=-N
    build-depends:       base
                       , GLFW-b
                       , OpenGL
                       , LearnOpenGL
                       , array
                       , filepath
                       , GLUtil
    default-language:    Haskell2010

executable textures
    if !flag(buildAll)
        buildable:       False
    hs-source-dirs:      app/1_Getting-started/4_Textures
    main-is:             Textures.hs
    ghc-options:         -threaded -rtsopts -with-rtsopts=-N
    build-depends:       base
                       , GLFW-b
                       , OpenGL
                       , LearnOpenGL
                       , filepath
                       , GLUtil
    default-language:    Haskell2010

executable textures-combined
    if !flag(buildAll)
        buildable:       False
    hs-source-dirs:      app/1_Getting-started/4_Textures
    main-is:             Textures-combined.hs
    ghc-options:         -threaded -rtsopts -with-rtsopts=-N
    build-depends:       base
                       , GLFW-b
                       , OpenGL
                       , LearnOpenGL
                       , filepath
                       , GLUtil
    default-language:    Haskell2010

executable transformations
    if !flag(buildAll)
        buildable:       False
    hs-source-dirs:      app/1_Getting-started/5_Transformations
    main-is:             Transformations.hs
    ghc-options:         -threaded -rtsopts -with-rtsopts=-N
    build-depends:       base
                       , GLFW-b
                       , OpenGL
                       , filepath
                       , GLUtil
                       , LearnOpenGL
                       , linear
    default-language:    Haskell2010

executable coordinate-systems
    if !flag(buildAll)
        buildable:       False
    hs-source-dirs:      app/1_Getting-started/6_Coordinate-systems
    main-is:             Coordinate-systems.hs
    ghc-options:         -threaded -rtsopts -with-rtsopts=-N
    build-depends:       base
                       , GLFW-b
                       , OpenGL
                       , filepath
                       , GLUtil
                       , LearnOpenGL
                       , linear
    default-language:    Haskell2010

executable coordinate-systems-with-depth
    if !flag(buildAll)
        buildable:       False
    hs-source-dirs:      app/1_Getting-started/6_Coordinate-systems
    main-is:             Coordinate-systems-with-depth.hs
    ghc-options:         -threaded -rtsopts -with-rtsopts=-N
    build-depends:       base
                       , GLFW-b
                       , OpenGL
                       , filepath
                       , GLUtil
                       , LearnOpenGL
                       , linear
    default-language:    Haskell2010

executable coordinate-systems-multiple-objects
    if !flag(buildAll)
        buildable:       False
    hs-source-dirs:      app/1_Getting-started/6_Coordinate-systems
    main-is:             Coordinate-systems-multiple-objects.hs
    ghc-options:         -threaded -rtsopts -with-rtsopts=-N
    build-depends:       base
                       , GLFW-b
                       , OpenGL
                       , filepath
                       , GLUtil
                       , LearnOpenGL
                       , linear
    default-language:    Haskell2010

executable camera-circle
    if !flag(buildAll)
        buildable:       False
    hs-source-dirs:      app/1_Getting-started/7_Camera
    main-is:             Camera-circle.hs
    ghc-options:         -threaded -rtsopts -with-rtsopts=-N
    build-depends:       base
                       , GLFW-b
                       , OpenGL
                       , filepath
                       , GLUtil
                       , LearnOpenGL
                       , linear
    default-language:    Haskell2010

executable camera-keyboard
    if !flag(buildAll)
        buildable:       False
    hs-source-dirs:      app/1_Getting-started/7_Camera
    main-is:             Camera-keyboard.hs
    ghc-options:         -threaded -rtsopts -with-rtsopts=-N
    build-depends:       base
                       , GLFW-b
                       , OpenGL
                       , filepath
                       , GLUtil
                       , LearnOpenGL
                       , linear
                       , reactive-banana
                       , containers
    default-language:    Haskell2010

executable camera-keyboard-dt
    if !flag(buildAll)
        buildable:       False
    hs-source-dirs:      app/1_Getting-started/7_Camera
    main-is:             Camera-keyboard-dt.hs
    ghc-options:         -threaded -rtsopts -with-rtsopts=-N
    build-depends:       base
                       , GLFW-b
                       , OpenGL
                       , filepath
                       , GLUtil
                       , LearnOpenGL
                       , linear
                       , reactive-banana
                       , containers
    default-language:    Haskell2010

executable camera-mouse
    if !flag(buildAll)
        buildable:       False
    hs-source-dirs:      app/1_Getting-started/7_Camera
    main-is:             Camera-mouse.hs
    ghc-options:         -threaded -rtsopts -with-rtsopts=-N
    build-depends:       base
                       , GLFW-b
                       , OpenGL
                       , filepath
                       , GLUtil
                       , LearnOpenGL
                       , linear
                       , reactive-banana
                       , containers
    default-language:    Haskell2010

executable camera-zoom
    if !flag(buildAll)
        buildable:       False
    hs-source-dirs:      app/1_Getting-started/7_Camera
    main-is:             Camera-zoom.hs
    ghc-options:         -threaded -rtsopts -with-rtsopts=-N
    build-depends:       base
                       , GLFW-b
                       , OpenGL
                       , filepath
                       , GLUtil
                       , LearnOpenGL
                       , linear
                       , reactive-banana
                       , containers
    default-language:    Haskell2010

executable camera-with-class
    if !flag(buildAll)
        buildable:       False
    hs-source-dirs:      app/1_Getting-started/7_Camera
    main-is:             Camera-with-class.hs
    ghc-options:         -threaded -rtsopts -with-rtsopts=-N
    build-depends:       base
                       , GLFW-b
                       , OpenGL
                       , filepath
                       , GLUtil
                       , LearnOpenGL
                       , linear
                       , reactive-banana
                       , containers
    default-language:    Haskell2010

executable colors-scene
    if !flag(buildAll)
        buildable:       False
    hs-source-dirs:      app/2_Lighting/1_Colors
    main-is:             Colors-scene.hs
    ghc-options:         -threaded -rtsopts -with-rtsopts=-N
    build-depends:       base
                       , GLFW-b
                       , OpenGL
                       , filepath
                       , GLUtil
                       , LearnOpenGL
                       , linear
                       , reactive-banana
                       , containers
    default-language:    Haskell2010

executable basic-lighting-diffuse
    if !flag(buildAll)
        buildable:       False
    hs-source-dirs:      app/2_Lighting/2_Basic-lighting
    main-is:             Basic-lighting-diffuse.hs
    ghc-options:         -threaded -rtsopts -with-rtsopts=-N
    build-depends:       base
                       , GLFW-b
                       , OpenGL
                       , filepath
                       , GLUtil
                       , LearnOpenGL
                       , linear
                       , reactive-banana
                       , containers
    default-language:    Haskell2010

executable basic-lighting-specular
    if !flag(buildAll)
        buildable:       False
    hs-source-dirs:      app/2_Lighting/2_Basic-lighting
    main-is:             Basic-lighting-specular.hs
    ghc-options:         -threaded -rtsopts -with-rtsopts=-N
    build-depends:       base
                       , GLFW-b
                       , OpenGL
                       , filepath
                       , GLUtil
                       , LearnOpenGL
                       , linear
                       , reactive-banana
                       , containers
    default-language:    Haskell2010

executable materials
    if !flag(buildAll)
        buildable:       False
    hs-source-dirs:      app/2_Lighting/3_Materials
    main-is:             Materials.hs
    ghc-options:         -threaded -rtsopts -with-rtsopts=-N
    build-depends:       base
                       , GLFW-b
                       , OpenGL
                       , filepath
                       , GLUtil
                       , LearnOpenGL
                       , linear
                       , reactive-banana
                       , containers
    default-language:    Haskell2010

executable lighting-maps-diffuse
    if !flag(buildAll)
        buildable:       False
    hs-source-dirs:      app/2_Lighting/4_Lighting-maps
    main-is:             Lighting-maps-diffuse.hs
    ghc-options:         -threaded -rtsopts -with-rtsopts=-N
    build-depends:       base
                       , GLFW-b
                       , OpenGL
                       , filepath
                       , GLUtil
                       , LearnOpenGL
                       , linear
                       , reactive-banana
                       , containers
    default-language:    Haskell2010

executable lighting-maps-specular
    if !flag(buildAll)
        buildable:       False
    hs-source-dirs:      app/2_Lighting/4_Lighting-maps
    main-is:             Lighting-maps-specular.hs
    ghc-options:         -threaded -rtsopts -with-rtsopts=-N
    build-depends:       base
                       , GLFW-b
                       , OpenGL
                       , filepath
                       , GLUtil
                       , LearnOpenGL
                       , linear
                       , reactive-banana
                       , containers
    default-language:    Haskell2010

executable light-casters-directional
    if !flag(buildAll)
        buildable:       False
    hs-source-dirs:      app/2_Lighting/5_Light-casters
    main-is:             Light-casters-directional.hs
    ghc-options:         -threaded -rtsopts -with-rtsopts=-N
    build-depends:       base
                       , GLFW-b
                       , OpenGL
                       , filepath
                       , GLUtil
                       , LearnOpenGL
                       , linear
                       , reactive-banana
                       , containers
    default-language:    Haskell2010

executable light-casters-point
    if !flag(buildAll)
        buildable:       False
    hs-source-dirs:      app/2_Lighting/5_Light-casters
    main-is:             Light-casters-point.hs
    ghc-options:         -threaded -rtsopts -with-rtsopts=-N
    build-depends:       base
                       , GLFW-b
                       , OpenGL
                       , filepath
                       , GLUtil
                       , LearnOpenGL
                       , linear
                       , reactive-banana
                       , containers
    default-language:    Haskell2010

executable light-casters-spotlight
    if !flag(buildAll)
        buildable:       False
    hs-source-dirs:      app/2_Lighting/5_Light-casters
    main-is:             Light-casters-spotlight.hs
    ghc-options:         -threaded -rtsopts -with-rtsopts=-N
    build-depends:       base
                       , GLFW-b
                       , OpenGL
                       , filepath
                       , GLUtil
                       , LearnOpenGL
                       , linear
                       , reactive-banana
                       , containers
    default-language:    Haskell2010

executable light-casters-spotlight-soft
    if !flag(buildAll)
        buildable:       False
    hs-source-dirs:      app/2_Lighting/5_Light-casters
    main-is:             Light-casters-spotlight-soft.hs
    ghc-options:         -threaded -rtsopts -with-rtsopts=-N
    build-depends:       base
                       , GLFW-b
                       , OpenGL
                       , filepath
                       , GLUtil
                       , LearnOpenGL
                       , linear
                       , reactive-banana
                       , containers
    default-language:    Haskell2010

executable multiple-lights
    if !flag(buildAll)
        buildable:       False
    hs-source-dirs:      app/2_Lighting/6_Multiple-lights
    main-is:             Multiple-lights.hs
    ghc-options:         -threaded -rtsopts -with-rtsopts=-N
    build-depends:       base
                       , GLFW-b
                       , OpenGL
                       , filepath
                       , GLUtil
                       , LearnOpenGL
                       , linear
                       , reactive-banana
                       , containers
    default-language:    Haskell2010

executable multiple-lights-with-spot
    if !flag(buildAll)
        buildable:       False
    hs-source-dirs:      app/2_Lighting/6_Multiple-lights
    main-is:             Multiple-lights-with-spot.hs
    ghc-options:         -threaded -rtsopts -with-rtsopts=-N
    build-depends:       base
                       , GLFW-b
                       , OpenGL
                       , filepath
                       , GLUtil
                       , LearnOpenGL
                       , linear
                       , reactive-banana
                       , containers
    default-language:    Haskell2010

executable light-cubes-with-mesh
    hs-source-dirs:      app/3_Model-loading/1_Mesh
    main-is:             Light-cubes-with-mesh.hs
    ghc-options:         -threaded -rtsopts -with-rtsopts=-N
    build-depends:       base
                       , GLFW-b
                       , OpenGL
                       , filepath
                       , GLUtil
                       , LearnOpenGL
                       , linear
                       , reactive-banana
                       , containers
                       , transformers
                       , monads-tf
    default-language:    Haskell2010

executable model-diffuse
    if !flag(buildAll)
        buildable:       False
    hs-source-dirs:      app/3_Model-loading/2_Model
    main-is:             Model-diffuse.hs
    ghc-options:         -threaded -rtsopts -with-rtsopts=-N
    build-depends:       base
                       , GLFW-b
                       , OpenGL
                       , filepath
                       , GLUtil
                       , LearnOpenGL
                       , linear
                       , reactive-banana
                       , containers
                       , transformers
                       , monads-tf
    default-language:    Haskell2010


source-repository head
  type:     git
  location: https://github.com/atwupack/LearnOpenGL
